# npio

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  Gemfile  LICENSE  Makefile  NEWS.md  README.md  appveyor.yml  meson.build  meson_options.txt  npio.c  npio.cpp  npio.h  npio.pc.in
.github/workflows/: codecov.yml  codeql.yml  docs.yml  macos.yml  meson.yml  ubuntu.yml
cmake/: FindNPIO.cmake  FindNpio.cmake  FindUnity.cmake  npio-config.cmake.in  npioConfig.cmake.in
docs/: _config.yml  changelog.md  faq.md  index.md  install.md  news.md  reference.md  samples.md
docs/source/: api.rst  change.rst  conf.py  index.rst  install.rst  news.rst
src/: npio.c  npio.h
subprojects/: unity.wrap
test/: example.cpp  mat2npz.py  np_save.npy  npy2mat.py  npz.py  npz2mat.py  test_np_array_create.c  test_npio_strerror.c  test_npy_array_create.c  test_npy_fopen.c  test_npy_fread.c  test_npy_fwrite.c  test_npy_init.c  test_npy_load.c  test_npy_read.c  test_npz_load.c
test/data/: complex64_3x3.npy  int16_range.npy
